feat: add update cast  member